# OO-duomenys

./: CMakeLists.txt  Doxyfile  README.md  funkcijos.cpp  funkcijos.h  generavimas.cpp  generavimas.h  isvedimas.cpp  isvedimas.h  kursiokai.txt  main.cpp  mediana.cpp  mediana.h  medianaMas.cpp  mediana_nuskaitant.cpp  nuskaitymas.cpp  nuskaitymas.h  rikiavimas.cpp  rikiavimas.h  skirstymas.cpp  skirstymas.h  studentas.cpp  studentas.h  vidurkis.cpp  vidurkis.h  vidurkis_nuskaitant.cpp
Unit_testing/: test.cpp  test.txt
doxygen/: Doxyfile
doxygen/html/: classstudentas-members.html  classstudentas.html  dir_479e5eeca316a5e927f994bead634b6b.html  dir_656ceeeca5494c2a79b7c34b5309beae.html  files.html  functions.html  functions_func.html  functions_rela.html  funkcijos_8h_source.html  index.html  md__c_1__users__marta__documents_objektinis_uzduotys__antra_uzduotis_clone__r_e_a_d_m_e.html  pages.html  studentas_8h_source.html
doxygen/latex/: classstudentas.tex  md__c_1__users__marta__documents_objektinis_uzduotys__antra_uzduotis_clone__r_e_a_d_m_e.tex  refman.tex
html/: annotated.html  classes.html  classstudentas-members.html  classstudentas.html  dir_479e5eeca316a5e927f994bead634b6b.html  dir_656ceeeca5494c2a79b7c34b5309beae.html  files.html  funkcijos_8h_source.html  index.html  md__c_1__users__marta__documents_objektinis_uzduotys__antra_uzduotis_clone__r_e_a_d_m_e.html  pages.html  studentas_8h_source.html
html/search/: all_0.js  (+1 more)
latex/: classstudentas.tex  md__c_1__users__marta__documents_objektinis_uzduotys__antra_uzduotis_clone__r_e_a_d_m_e.tex  refman.tex
(+7 files in other folders)
